* 0.5.2:
  - Add list_recursive, and list_glob methods to ResolverRead
  - Tune the resolver server to give much higher priority to Resolve
    over List and Table calls to compensate for the potentially large
    traffic caused by list_recursive and list_glob. A List/Table call
    now "costs" 10K Resolve calls, so the max batch size of a read
    client doing only List calls is now 100 instead of 1000K.
  
* 0.5.1:
  - Resolver server: improve the performance of sharding (eliminate
    integer division) for a noticable speedup processing large
    batches.
  - Put an upper bound on total pool size to avoid various extreme
    scenarios causing unbounded memory usage.
  - Pool more buffers in the resolver server to reduce dynamic
    allocation.
  - Fix a bug in the new sharded resolver store that broke default
    publishing.
  - Fix unit tests.

* 0.5.0:
  - Update to tokio 0.3 aka 1.0
  - Implement timeout logic in the resolver client to deal with the
    case where a resolver server is hung. The rule is, minimum timeout
    15 seconds or 6 microseconds per operation in the batch for reads
    and 12 microseconds per operation in the batch for writes,
    whichever timeout is longer.
  - Limit reads and writes to a maximum batch size to prevent doing
    too much work at once on a tokio worker thread, and reader/writer
    starvation, The max batch sizes are are 1000K ops for readers and
    100K ops for writers. Cleaning up dead publishers are included in
    these limits. Results are flushed back to the client after each
    chunk so that we interact properly with the hang detection feature
    mentioned above.
  - The resolver now uses all cores for reads and writes, and no longer
    uses locking, instead the database is sharded internally with each
    CPU controlling a shard. Batches are hashed by path and sent out
    to their corresponding shard (or all of them in the case of
    e.g. list). Performance for large publishers and/or lots of